--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^6.2.1",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.16",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1",
     "xss-clean": "^0.1.1"
   }
 }
